# qcloud

./: CMakeLists.txt  README.md  component.mk
examples/smart_light/: CMakeLists.txt  README.md
examples/smart_light/components/factory_restore/: CMakeLists.txt  factory_restore.c  factory_restore.h
examples/smart_light/components/led/: CMakeLists.txt  board_ops.c  led_5050.c  led_5050.h  light.c  light.h
examples/smart_light/components/led/led_driver/inc/: led_5050.h  led_ws2812.h
examples/smart_light/components/led/led_driver/src/: led_5050.c  led_ws2812.c
examples/smart_light/components/ota_esp/: CMakeLists.txt  qcloud_iot_ota_esp.c
examples/smart_light/components/samples/: CMakeLists.txt  smart_light.c  smart_light.h
examples/smart_light/components/wifi_config/: CMakeLists.txt  component.mk  esp_qcloud_mqtt.c  esp_qcloud_mqtt.h  esp_qcloud_prov.c  esp_qcloud_prov.h  qcloud_iot_demo.h  qcloud_wifi_config.c  wifi_config_esp.c
examples/smart_light/main/: CMakeLists.txt  component.mk  main.c
qcloud_iot_c_sdk/include/: config.h
